# alembic

./: .gitignore  .hgignore  .hgtags  .travis.yml  ACKNOWLEDGEMENTS.txt  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  Doxyfile  FEEDBACK.txt  LICENSE.txt  MANIFEST.txt  NEWS.txt  README.txt  THIRD-PARTY.txt  build.sh  build_version.sh  setup.py
cmake/bootstrap/zlib_trycompile/: CMakeLists.txt  zlib_trycompile.cpp
doc/: Alembic-Geometric-Types.txt  Boost-howtobuild.txt  CMakeLists.txt  HDF5-howtobuild.txt
doc/source/: abcview.rst  cask.rst  conf.py.in  examples.rst  index.rst  quickstart.rst
doc/source/alembic/: abc.rst  abca.rst  abcc.rst  abcg.rst  abcm.rst  alembicgl.rst  index.rst  util.rst
examples/AbcClients/WFObjConvert/: AbcReader.cpp  AbcReader.h  All.h  CMakeLists.txt  Export.h  Foundation.h  ParseReader.cpp  ParseReader.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h
examples/prman/Procedural/: ArbAttrUtil.cpp  ArbAttrUtil.h  CMakeLists.txt  PathUtil.cpp  PathUtil.h  ProcArgs.cpp  ProcArgs.h  ProcMain.cpp  SampleUtil.cpp  SampleUtil.h  SubDTags.cpp  SubDTags.h  WriteGeo.cpp  WriteGeo.h
fuzz/: CMakeLists.txt  README.md  build_fuzzers.sh
lib/AbcOpenGL/: All.h  CMakeLists.txt  DrawContext.h  Drawable.h  Export.h  Foundation.h  GLCamera.cpp  GLCamera.h  ICurvesDrw.cpp  ICurvesDrw.h  INuPatchDrw.cpp  INuPatchDrw.h  IObjectDrw.cpp  IObjectDrw.h  IPointsDrw.cpp  IPointsDrw.h  IPolyMeshDrw.cpp  IPolyMeshDrw.h  ISubDDrw.cpp  ISubDDrw.h  IXformDrw.cpp  IXformDrw.h  MeshDrwHelper.cpp  MeshDrwHelper.h  Scene.cpp  Scene.h  SceneWrapper.cpp  SceneWrapper.h
lib/Alembic/: AlembicConfig.cmake.in  CMakeLists.txt  CMakeLists.txt.orig
lib/Alembic/Abc/: All.h  ArchiveInfo.cpp  ArchiveInfo.h  Argument.h  Base.h  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Export.h  Foundation.h  IArchive.cpp  IArchive.h  IArgument.h  IArrayProperty.cpp  IArrayProperty.h  IBaseProperty.h  ICompoundProperty.cpp  ICompoundProperty.h  IObject.cpp  IObject.h  ISampleSelector.cpp  ISampleSelector.h  IScalarProperty.cpp  IScalarProperty.h  ISchema.cpp  ISchema.h  ISchemaObject.cpp  ISchemaObject.h  ITypedArrayProperty.cpp  ITypedArrayProperty.h  ITypedScalarProperty.cpp  ITypedScalarProperty.h  OArchive.cpp  OArchive.h  OArgument.h  OArrayProperty.cpp  OArrayProperty.h  OBaseProperty.h  OCompoundProperty.cpp  OCompoundProperty.h  (+19 more)
lib/Alembic/AbcAssetWIP/: Conventions.txt  (+3 more)
maya/AbcExport/: AbcExport.cpp  AbcExport.h  AbcWriteJob.cpp  AbcWriteJob.h  AttrWriteUtility.cpp  AttributesWriter.cpp  AttributesWriter.h  CMakeLists.txt  Foundation.h  MayaCameraWriter.cpp  MayaCameraWriter.h  MayaFaceSetWriter.cpp  MayaFaceSetWriter.h  MayaLocatorWriter.cpp  MayaLocatorWriter.h  MayaMeshWriter.cpp  MayaMeshWriter.h  MayaNurbsCurveWriter.cpp  MayaNurbsCurveWriter.h  MayaNurbsSurfaceWriter.cpp  MayaNurbsSurfaceWriter.h  MayaPointPrimitiveWriter.cpp  MayaPointPrimitiveWriter.h  MayaTransformWriter.cpp  MayaTransformWriter.h  MayaUtility.cpp  MayaUtility.h  README
maya/AbcImport/: AbcImport.cpp  AbcImport.h  AbcImportInitStrings.mel  AbcImportStrings.cpp  AbcImportStrings.h  AlembicCreateUI.mel  AlembicCreateUI.res.mel  AlembicImportFileTranslator.cpp  AlembicImportFileTranslator.h  AlembicNode.cpp  AlembicNode.h  CMakeLists.txt  CameraHelper.cpp  CameraHelper.h  CreateSceneHelper.cpp  CreateSceneHelper.h  LocatorHelper.cpp  LocatorHelper.h  MeshHelper.cpp  MeshHelper.h  NodeIteratorVisitorHelper.cpp  NodeIteratorVisitorHelper.h  NurbsCurveHelper.cpp  NurbsCurveHelper.h  NurbsSurfaceHelper.cpp  NurbsSurfaceHelper.h  PointHelper.cpp  PointHelper.h  README  XformHelper.cpp  XformHelper.h  doAlembicExportArgList.mel  doAlembicExportArgList.res.mel  doAlembicImportArgList.mel  doAlembicImportArgList.res.mel  insertPipelineSubMenu.mel  insertPipelineSubMenu.res.mel  main.cpp  performAlembicExport.mel  performAlembicExport.res.mel  (+5 more)
maya/AlembicTakoSPIExport/: AlembicTakoExport.cpp  AlembicTakoExport.h  AttributesWriter.cpp  AttributesWriter.h  CMakeLists.txt  Foundation.h  HDFWriteJob.cpp  HDFWriteJob.h  MayaCameraWriter.cpp  MayaCameraWriter.h  MayaLightWriter.cpp  MayaLightWriter.h  MayaLocatorWriter.cpp  MayaLocatorWriter.h  MayaMeshWriter.cpp  MayaMeshWriter.h  MayaNurbsCurveWriter.cpp  MayaNurbsCurveWriter.h  MayaNurbsSurfaceWriter.cpp  MayaNurbsSurfaceWriter.h  MayaPointPrimitiveWriter.cpp  MayaPointPrimitiveWriter.h  MayaTransformWriter.cpp  MayaTransformWriter.h  MayaUtility.cpp  MayaUtility.h
prman/Procedural/: ArbAttrUtil.cpp  ArbAttrUtil.h  CMakeLists.txt  PathUtil.cpp  ProcArgs.cpp  ProcArgs.h  ProcMain.cpp  README  SampleUtil.cpp  SampleUtil.h  SubDTags.cpp  SubDTags.h  WriteGeo.cpp  WriteGeo.h  WriteMaterial.cpp  WriteMaterial.h
pub/Gto/: CMakeLists.txt  EXTProtocols.h  FlexLexer.cpp  FlexLexer.h  Header.h  Lexer.l  Parser.cpp  Parser.h  Parser.y  Protocols.h  RawData.cpp  RawData.h  Reader.cpp  Reader.h  Utilities.cpp  Utilities.h  Writer.cpp  Writer.h  flexfilter.sed  zhacks.cpp  zhacks.h
pub/GtoContainer/: CMakeLists.txt  Component.cpp  Component.h  Exception.h  Foundation.h  ObjectVector.cpp  ObjectVector.h  Property.cpp  Property.h  PropertyContainer.cpp  PropertyContainer.h  Protocol.h  Reader.cpp  Reader.h  StdProperties.cpp  StdProperties.h  TypedProperty.h  Utilities.h  Writer.cpp  Writer.h
python/PyAlembic/: CMakeLists.txt  Foundation.h  PyAbcCoreLayer.cpp  PyAbcGeomTypes.cpp  PyAbcTypes.cpp  PyArchiveBounds.cpp  PyArchiveInfo.cpp  PyBasis.cpp  PyCameraSample.cpp  PyCoreAbstractTypes.cpp  PyFilmBackXformOp.cpp  PyIArchive.cpp  PyIArrayProperty.cpp  PyIBaseProperty.h  PyICamera.cpp  PyICollections.cpp  PyICompoundProperty.cpp  PyICurves.cpp  PyIFaceSet.cpp  PyIGeomBase.cpp  PyIGeomBaseSchema.h  PyIGeomParam.cpp  PyIGeomParam.h  PyIGeomParamBox.cpp  PyIGeomParamMatrixQuadColorNormal.cpp  PyIGeomParamPOD.cpp  PyIGeomParamVertexPoint.cpp  PyIGeomParamVertexPointBox.cpp  PyILight.cpp  PyIMaterial.cpp  PyINuPatch.cpp  PyIObject.cpp  PyIPoints.cpp  PyIPolyMesh.cpp  PyIPropertyUtil.h  PyISampleSelector.cpp  PyIScalarProperty.cpp  PyISchema.h  PyISchemaObject.h  PyISubD.cpp  (+46 more)
(+1717 files in other folders)
